--- a/data_analysis/one_shot_word_analysis.Rmd
+++ b/data_analysis/one_shot_word_analysis.Rmd
@@ -748,19 +748,31 @@ smw_d = smw_d %>%
                          levels=c(" centroid", "Optimizing\nfrom current", " opt_centroid", "Optimizing\nfrom zero", " with"), 
                          labels=c("Centroid", "Optimizing\nfrom current", "Optimizing\nfrom centroid", "Optimizing\nfrom zero", "Full training\nwith the word"))) 
 
-withword_d = smw_d %>%
-  filter(approach = "Full training\nwith the word")
+smw_withword_d = smw_d %>%
+  filter(approach == "Full training\nwith the word")
+
+smw_withword_d = smw_withword_d[rep(1:4, each=10),] %>%
+  mutate(num_train = rep(1:10, 4)) %>%
+  select(-perm) %>%
+  mutate(train_with_word=T)
+
+smw_d = smw_d %>%
+  filter(approach != "Full training\nwith the word") %>%
+  mutate(train_with_word=F)
 ```
 
 
 ```{r}
-plotting_d = smw_d  %>%
-  filter(approach != 'with')# %>%
-#  group_by(approach, num_train, perm) %>%
-#  summarize(similarity_correlation = mean(similarity_correlation))
+avg_d = smw_d  %>%
+  filter(approach != 'with') %>%
+  group_by(word, approach, num_train, train_with_word) %>%
+  summarize(similarity_correlation = mean(similarity_correlation)) %>%
+  ungroup %>%
+  bind_rows(smw_withword_d)
 
 ggplot(data=smw_d) +
   geom_line(aes(x=num_train, y=similarity_correlation, color=approach, group=interaction(approach, perm)), alpha=0.25) +
+  geom_line(data=avg_d, aes(x=num_train, y=similarity_correlation, color=approach, linetype=train_with_word), size=1) +
   facet_wrap( ~ word) +
   labs(x="Number of training sentences", y = "Similarity structure correlation", color = "Approach") +
   scale_x_continuous(breaks=1:10) +
@@ -773,5 +785,147 @@ ggplot(data=smw_d) +
                  default.unit="inch"))+
   theme_bw(base_size=12) +
   theme(panel.grid.minor=element_blank(), panel.grid.major=element_blank())
+```
+```{r}
+ggsave('../results/10perms4_similarity_correlations.png', width=7, height=5)
+```
+
+```{r}
+smw_within_d = read.csv('../result_data_4/within_simil_corrs.csv', header=T) %>%
+  mutate(similarity_correlation = 1 - similarity_correlation)  # corr. dist. -> correlation
+```
+```{r}
+smw_withword_d %>%
+  summarize(similarity_correlation=mean(similarity_correlation))
+
+smw_within_d %>%
+  group_by(approach, num_train) %>%
+  summarize(similarity_correlation=mean(similarity_correlation))
+```
+
+
+
+# Round 6 - final for submission, more replay
+
+
+```{r}
+words = c("borrow", "cowboys", "immune", "rice") 
+num_train = 1:10
+perms = 1:5
+Approaches = c("opt_centroid", "centroid")
+
+d = data.frame()
+withword_d = data.frame()
+for (word in words) {
+  for (perm in perms) {
+    for (n in num_train) {
+      for (a in Approaches) {
+        filename = sprintf("../result_data_6/%s_perm%i_train_logs/%s/%i_%s_results_log.csv", word, perm, word, n, a)
+        if (!file.exists(filename)) {
+          next
+        }
+        this_d = read.csv(filename, header=F)
+        this_d = this_d %>% 
+          spread(V1, V2) %>%
+          mutate(new_word=word, perm=perm, num_train=n, Approach=a)
+        d = bind_rows(d, this_d)
+        
+      }
+    }
+  }
+  filename = sprintf("../result_data_3/%s_withword_train_logs/%s/_results_log.csv", word, word) #3 is intentional -- no need to train again
+  if (!file.exists(filename)) {
+    next
+  }
+  this_d2 = read.csv(filename, header=F)
+  this_d2 = this_d2 %>% 
+    spread(V1, V2) %>%
+    mutate(new_word=word) %>%
+    select(-post_new_word_test_perp) %>%
+    rename(post_withword_test_perp = pre_new_word_test_perp) %>%
+    mutate(withoutword_test_perp=head(this_d$pre_new_word_test_perp, n=1), without_test_perp=head(this_d$pre_test_perp, n=1))
+  withword_d = bind_rows(withword_d, this_d2)
+}
+
+```
+
+# Data manipulation
+```{r}
+d = d %>% 
+  filter(!is.na(post_new_word_test_perp)) %>%
+  mutate(nw_delta = post_new_word_test_perp - pre_new_word_test_perp, pct_delta=100*nw_delta/pre_new_word_test_perp, test_delta=post_test_perp - pre_test_perp, pct_test_delta = 100 * test_delta/pre_test_perp, perm=factor(perm), train_with_word=F) %>%
+  mutate(Approach=factor(Approach, 
+                         levels=c("centroid", "opt", "opt_centroid", "opt_zero", "train_with_word"), 
+                         labels=c("Centroid", "Optimizing\nfrom current", "Optimizing\nfrom centroid", "Optimizing\nfrom zero", "Full training\nwith the word")))
+withword_d = withword_d %>% 
+  mutate(nw_delta = post_withword_test_perp - withoutword_test_perp,  pct_delta=100*nw_delta/withoutword_test_perp, test_delta=post_test_perp - without_test_perp, pct_test_delta = 100 * test_delta/pre_test_perp)
+```
+
+```{r}
+number_of_new_words = length(words)
+withword_d = withword_d[rep(1:number_of_new_words, each=10),]
+withword_d = withword_d %>%
+  mutate(num_train=rep(1:10, number_of_new_words), Approach='Full training\nwith the word', train_with_word=T) %>%
+  select(num_train, Approach, new_word, nw_delta, pct_delta, test_delta, pct_test_delta, train_with_word)
+avg_d = d %>% 
+  group_by(num_train, Approach, new_word, train_with_word) %>% 
+  summarize(nw_delta = mean(nw_delta), pct_delta=mean(pct_delta), test_delta=mean(test_delta), pct_test_delta=mean(pct_test_delta)) %>% 
+  ungroup() %>% 
+  rbind(., withword_d) %>%
+  mutate(Approach=factor(Approach, 
+                         levels=c("Centroid", "Optimizing\nfrom current", "Optimizing\nfrom centroid", "Optimizing\nfrom zero", "Full training\nwith the word"), 
+                         labels=c("Centroid", "Optimizing\nfrom current", "Optimizing\nfrom centroid", "Optimizing\nfrom zero", "Full training\nwith the word")))
+```
+
+# Approach comparisons
+
+```{r, echo=FALSE, message=F}
+ggplot() +
+  geom_line(data=avg_d, aes(x=num_train, y=pct_delta, color=Approach, linetype=train_with_word, group=Approach), size=1) +
+  geom_line(data=d, aes(x=num_train,y=pct_delta, color=Approach, group=interaction(Approach, perm)), alpha=0.25) +
+  facet_wrap(~ new_word) +
+  xlab("Number of training sentences") +
+  scale_x_continuous(breaks=1:10) +
+  scale_color_brewer(palette='Dark2', drop=FALSE) +
+  ylab("Change in perplexity on new word test data (%)") +
+  guides(linetype=F,
+         color=guide_legend(
+                 keywidth=0.1,
+                 keyheight=0.4,
+                 default.unit="inch"))+
+  theme_bw(base_size=12) +
+  theme(panel.grid.minor=element_blank(), panel.grid.major=element_blank())
+```
+```{r}
+ggsave('../results/10perms6_replay_delta_perplexity.png', width=7, height=5)
+```
+
+```{r}
+ggplot() +
+  geom_line(data=avg_d, aes(x=num_train, y=pct_test_delta, color=Approach, linetype=train_with_word), size=1) +
+  geom_line(data=d, aes(x=num_train,y=pct_test_delta, color=Approach, group=interaction(Approach, perm)), alpha=0.25) +
+  facet_wrap(~ new_word) +
+  xlab("Number of training sentences") +
+  scale_x_continuous(breaks=1:10) +
+  ylim(NA, 2.0) +
+  scale_color_brewer(palette='Dark2', drop=F) +
+  ylab("Change in perplexity on PTB test data (%)") +
+  guides(linetype=F,
+         color=guide_legend(
+                 keywidth=0.1,
+                 keyheight=0.4,
+                 default.unit="inch"))+
+  theme_bw(base_size=12) +
+  theme(panel.grid.minor=element_blank(), panel.grid.major=element_blank())
+```
+
+```{r}
+ggsave('../results/10perms6_replay_cost_to_others.png', width=7, height=5)
+```
+
+```{r}
+d %>%
+  group_by(Approach, num_train) %>%
+  summarize(max_delta=max(pct_test_delta), max_nw_delta = min(pct_delta))
 ```
 
