reformatting for arxiv version

--- a/writing/ICLR_2018/lampinen_one_shot_words.tex
+++ b/writing/ICLR_2018/lampinen_one_shot_words.tex
@@ -142,7 +142,7 @@ However, variable results are not a unique feature of learning the words later -
 We have presented a technique for doing one- or few-shot learning of word embeddings from text data: freeze all the weights in the network except the embeddings for the new word, and then optimize these embeddings for the sentence, interleaving with negative examples from network's prior experience and stopping early. This results in substantial improvement of the ability to predict the word in context, with minimal impairment of prediction of other words. This technique could allow natural language processing systems to adapt more flexibly to a changing world, like humans do. More generally, it could serve as a model for how to integrate rapid adaption into deep learning systems. \par 
 \bibliographystyle{iclr2018_conference}
 \bibliography{one_shot_words}
-
+\newpage
 \appendix
 \section{Supplementary figures} \label{supp_fig_appdx}
 
