--- a/writing/ICLR_2018/lampinen_one_shot_words.tex
+++ b/writing/ICLR_2018/lampinen_one_shot_words.tex
@@ -11,6 +11,11 @@
 \usepackage{graphicx}
 \usepackage{subcaption}
 \usepackage{float}
+\usepackage{listings} 
+\lstset{
+    breaklines=true,
+    postbreak=\mbox{\textcolor{red}{$\hookrightarrow$}\space}
+}
 
 \title{One-shot and few-shot learning of word embeddings}
 
@@ -57,7 +62,7 @@ Of course, there are a variety of possible initializations for the embeddings be
 \vspace{-0.5em}
 \begin{enumerate}
 \setlength\itemsep{0em}
-\item Beginning with the current embedding for the word (since the model has never seen the word, and thus has been trained to never produce it, this will likely be an embedding that is far from any outputs the network typically produces).
+\item Beginning with an embedding for a token that was placed in the softmax but never used during training. This might help separate the new embedding from other embeddings. 
 \item Beginning with a vector of zeros.
 \item Beginning with the centroid of the other words in the sentence, which \citet{Lazaridou2017} suggested was a useful estimate of an appropriate embedding.
 \end{enumerate}
@@ -66,20 +71,21 @@ We compare these to two baselines:
 \vspace{-0.5em}
 \begin{enumerate}
 \setlength\itemsep{0em}
-\item The centroid of the embeddings for the other words in the sentence, as in \citet{Lazaridou2017}. 
+\item The centroid of the embeddings of the other words in the sentence \citet{Lazaridou2017}. 
 \item Training the model with the 10 training sentences included in the corpus from the beginning (i.e. the ``standard'' deep-learning approach).
 \end{enumerate}
+(A commenter on an earlier draft of this paper noted that \cite{Herbelot2017} independently tried some similar strategies, but our results go farther in a variety of ways, see Appendix \ref{Herbelot}.)
 \subsection{Task, Model, and Approach}
 The framework we have described for updating embeddings could be applied very generally, but for the sake of this paper we ground it in a simple task: predicting the next word of a sentence based on the previous words, on the Penn Treebank dataset \citep{Marcus1993}. Specifically, we will use the (large) model architecture and approach of \citet{Zaremba2014a}, see Appendix \ref{methods_appdx_model} for details. \par
 Of course, human language understanding is much more complex than just prediction, and grounding language in situations and goals is likely important for achieving deeper understanding of language \citep{Gauthier2016}. More recent work has begun to do this \citep[e.g]{Hermann2017}, and it's likely that our approach would be more effective in settings like these. The ability of humans to make rich inferences about text stems from the richness of our knowledge. However, for simplicity, we have chosen to first demonstrate it on the prediction task. \par 
-In order to test our one-shot word-learning algorithm on the Penn Treebank, we chose a word which appeared only 20 times in the training set. We removed the sentences containing this word and then trained the model with the remaining sentences for 55 epochs using the learning rate decay strategy of \citet{Zaremba2014a}. Because the PTB dataset contains over 40,000 sentences, the 20 missing ones had essentially no effect on the networks overall performance. We then split the 20 sentences containing the new word into 10 train and 10 test, and trained on 1 - 10 of these in 10 different permutations (via a balanced Latin square \citep{Campbell1980}, which ensures that each sentence was used for one-shot learning once, and enforces diversity in the multi-shot examples). 
-\section{Results}
-\begin{figure}
+In order to test our one-shot word-learning algorithm on the Penn Treebank, we chose a word which appeared only 20 times in the training set. We removed the sentences containing this word and then trained the model with the remaining sentences for 55 epochs using the learning rate decay strategy of \citet{Zaremba2014a}. Because the PTB dataset contains over 40,000 sentences, the 20 missing ones had essentially no effect on the networks overall performance. We then split the 20 sentences containing the new word into 10 train and 10 test, and trained on 1 - 10 of these in 10 different permutations (via a balanced Latin square \citep{Campbell1980}, which ensures that each sentence was used for one-shot learning once, and enforces diversity in the multi-shot examples). In other words, we performed 100 training runs for each word, 10 training runs each with a distinct single sentence, 10 with distinct pairs of sentences, etc.
+\begin{figure}[t]
 \centering
 \includegraphics[width=\textwidth]{figures/10perms_delta_perplexity.png}
 \caption{Percent change in perplexity on 10 test sentences containing new word, plotted vs. the number of training sentences, across four different words, comparing optimizing from three different starting points to centroid and training with the word baselines. Averages across 10 permutations are shown in the dark lines, the individual results are shown in light lines. (Note that the full training with the word was only run once, with a single permutation of all 10 training sentences.)}
 \label{main_results_1}
 \end{figure}
+\section{Results}
 \begin{figure}
 \centering
 \begin{subfigure}[b]{\textwidth}
@@ -126,18 +132,21 @@ This is sensible for several reasons. First, whatever the new word conveys about
 Of course, as the above results illustrate, evaluating solely on change in perplexity limits insight. Thus we conducted more detailed analyses of the model's predictions. Since we know that most of the benefit of the one-shot training in our model comes from predicting the new word in context, we evaluated how well the word was predicted in three cases: when it was the actual target word, when it was not the current target but did appear in the sentence, and in ``irrelevant'' sentences. This allowed us to investigated whether the model was learning something useful, or simply overfitting to the new data. We compared the average log-probability the model assigned to the new word in each of these cases for the full training with the word baseline, the centroid approach to learning from 10 words, and our approach. The relevant cases were evaluated on our held-out test data for that word, the irrelevant was evaluated on the first 10 sentences of the PTB test corpus (an article that does not contain any of the words we used). See Table \ref{word_prob_table} for our results. \par 
 The model fully trained with the word shows clear distinctions between the three conditions -- the word is estimated to be about 10 times more likely in contexts where it appears than in irrelevant contexts, and is estimated to be about 25 times more likely again when it actually appears. However, the model severely underestimates the probability of the word when it does appear; the word would have a similar log probability under a uniform distribution over the whole vocabulary. The centroid method also has this issue, but in addition it does not even distinguish particularly well between contexts. The word is only estimated to be about 4 times more likely when it is the target than in completely irrelevant contexts. \par
 By contrast, our approach results in a good distinction between contexts -- the word is predicted to be about 5 times as likely in context where it appears compared to the irrelevant context, and about 25 times as likely again when the word actually appears. These relative probabilities are quite similar to those exhibited by the model fully trained with the word. Furthermore, the optimized embedding is much more successful at predicting the word when it appears. In all these respects, it appears superior to the centroid approach. When compared to the full training with the word, however, it appears that the base rate estimates of the prevalence of the word are inflated (which is sensible, even with 100 negative samples per positive sample in our training data the prevalence of the word is much higher than in the actual corpus). This explains the residual small increase in test perplexity on the dataset not containing the new word. It is possible that this could be ameliorated either by setting a prior on the bias for the new word (perhaps penalize the \(\ell_2\) norm of the distance of the bias from the values for other rare words), or with a validation set, or just by using more negative samples during training. In any case, the optimized embeddings are capturing some of the important features of when the word does and does not appear, and are doing so more effectively than the centroid approach.
-\subsection{Embedding similarity analyses}
-It has often been noted that relationships between word embeddings capture semantic features of the words, such as analogies between words \citep{Mikolov2013}. Thus it is natural to ask to what extent the word vectors produced by one-shot learning produce similarity structures close to those produced by full training with the word. To address this question, we computed the dot product\footnote{This seems to be the appropriate similarity ``metric'', given that the logits for the softmax over the vocabulary are formed by a matrix-vector multiplication which amounts to computing these dot products.} of the new word output embedding with all other word output embeddings. This vector of dot-product results can be thought of as a similarity map for the new word. We then compared these similarity maps to the similarity maps produced by full training with the word by computing correlations between the similarity maps. (See Appendix \ref{supp_fig_appdx} Fig. \ref{RSA_results} for our results.)\par
-Different runs of full training with the word produced very correlated similarity structures (all correlations greater than 0.9). Thus there does appear to be some consistent semantic structure that the embeddings are capturing. However, neither the centroid nor the optimizing one-shot learning methods seemed to be capturing this structure. The centroid method actually produced similarity structures that were \textbf{negatively} correlated with the full training similarity structures in three out of four cases! The optimizing method produced slightly more similar structures, but only in so far as most of its similarity structures were effectively uncorrelated with the full training similarity structure. Only for one word each did the methods produce a similarity structure that was strongly positively correlated with the structure produced by full training with the word. \par
-These results are difficult to interpret. On the one hand, the consistency of the semantic knowledge produced by the network when fully trained with the word suggests that it is discovering important structure. On the other hand, the later learning approaches actually produce even more internally consistency, at least when training with several sentences. Full training with the word produces an average correlation of 0.93 between different training runs, whereas optimizing with all ten sentences produces an average correlation of 0.97 (and optimizing with 1 sentence produces an average correlation of 0.50). Furthermore, the results of section \ref{digging_deeper} above suggest that our approach is doing about as well at distinguishing contexts where the new word does and does not appear. That is, the optimizing runs are extracting consistent structure as well, they are just creating different representational structures than the full training runs. \par
-These different representations may be explained by the removal of some contextual cues when the sentences are presented in isolation (noted above) -- the networks doing full training with the word are able to pay attention to relationships across sentence boundaries, which may give them exposure to word co-occurrences that the one-shot learning approach is missing. Including the surrounding context sentences in the training might result in more similar representational structures. \par
+\subsection{More words}
+\begin{figure}
+\includegraphics[width=\textwidth]{figures/hundred_replay_delta_perplexity.png}
+\caption{Percent change in perplexity on new word test data -- comparing 10-shot learning across 100 different words.}
+\label{hundred_word_figure}
+\end{figure}
+Up to this point, we have presented all the results in this paper broken down by word rather than as averages, because there were large word-by-word differences on almost every analysis, and we evaluated on relatively few new words. % Full training with the word did not improve the new word test perplexity more than the centroid approach on most of the words, but on two of them (``immune'' and ``strategist'') it did substantially better than even optimizing. Similarly, the optimizing method produced representational similarity structures that were more correlated with the full training with the word structure on three of the words we tested, but on a fourth the centroid approach produced a higher correlation. These results are likely due to the complex interactions between the context and the network's prior knowledge, and are difficult to quantify exactly. \par
+%However, variable results are not a unique feature of learning the words later -- even full training with the word produced much better results on some words than others. Especially when considering small slices of a dataset (like the handful out of 42,000 sentences that contained each word), the data can be quite noisy. Furthermore, it's likely that some types of words are easier to learn than others. Thus these diverse patterns in our results should not be interpreted as a unique deficiency in our technique. Even standard deep learning is fallible when evaluated on its ability to learn from small amounts of data embedded in a larger dataset. \par
+We did this for two reasons. First, it allowed us to analyze the variation within learning about a single word more deeply by exploring different sizes and selections of training examples and comparing to full training with the word. Second, because our earlier experiments required completely training a language model twice for each word (one with the corpus without the word, and once with only the train set). Nevertheless, reviewers of an earlier draft of this paper correctly pointed out that our small sample of words with large performance variation made our results more difficult to interpret. In order to rectify this, we ran an additional experiment which spans the space of words more broadly while remaining computationally feasible. \par
+In this experiment, we selected 100 of the ~150 words that appear exactly 20 times in the PTB train corpus (omitting the words we used in prior experiments, see Appendix \ref{hundred_words_appdx} for a complete list). Instead of training separate models without each word as we had previously, we trained a single model without all these words, and a single model with the train sentences for each of them. We then tested our one-shot learning technique and the centroid technique on these sentences, and compared to results obtained from ``full training with all words'' -- a model trained with the train sentences for each of the hundred words. Notice that this comparison is not as precise as the earlier ones -- the ``full training with all words'' model receives about 2.5 \% more training data over all than any of the one-shot learning models, which means it will both perform better even on other words and will thus have more relevant linguistic structure to learn the new words from. Nevertheless, the comparisons between our technique and the centroid technique are still valid, and the comparison to the full training with all words gives a \textbf{worst-case} bound on how poorly one-shot methods will do compared to full training. With this in mind, see Fig. \ref{hundred_word_figure} (and Appendix \ref{supp_fig_appdx} Fig. \ref{hundred_word_cost_figure}) for our results.\par
+As before, optimizing from the centroid performed much better than simply the centroid approach -- on average it produced an 64\% (11 percentage point) improvement over the centroid result, and on none of the 100 words did it perform worse than the centroid method. Furthermore, despite the disadvantage of being exposed to less total data, the optimizing approach seems to do approximately as well as the full training approach on average, although the full training approach sometimes results in much larger improvements. Nevertheless, these results show that our approach both performs consistently and consistently improves on previous methods. \par
 \section{Discussion}
 Overall, using our technique of updating only the embedding vectors of a word while training on sentences containing it and negative sampled sentences from the networks past experience seems quite effective. It allows for substantial reductions in perplexity on text containing the new word, without greatly interfering with knowledge about other words. Furthermore, it seems to be capturing more useful structure about how the word is used in context than previous approaches, and performs close to as well as full training with the word. These results are exciting beyond their potentiatl applications to natural language processing -- this technique could easily be extended to adapting systems to other types of new experiences, for example a vision network for an RL agent could have a few new filters per layer added and trained to accomodate a new type of object. \par 
-Under what circumstances will this strategy fail? Complementary learning systems theory \citep{Kumaran2016}, from which we drew inspiration, suggests that information which is \emph{schema-consistent} (i.e. fits in with the network's previous knowledge) can be integrated easily, whereas \emph{schema-inconsistent} knowledge (i.e. knowledge that differs from the network's previous experience) will cause interference. Similar principles should apply here. Our approach should work for learning a new word on a topic which is already somewhat familiar, but would likely fail to learn from a new word in a context that is not well understood. For example, it would be difficult to learn a new German word from context if the model has only experienced English language. \par  
+Under what circumstances will this strategy fail? Complementary learning systems theory \citep{Kumaran2016}, from which we drew inspiration, suggests that information which is \emph{schema-consistent} (i.e. fits in with the network's previous knowledge) can be integrated easily, whereas \emph{schema-inconsistent} knowledge (i.e. knowledge that differs from the network's previous experience) will cause interference. Similar principles should apply here. Our approach should work for learning a new word on a topic which is already somewhat familiar, but would likely fail to learn from a new word in a context that is not well understood. For example, it would be difficult to learn a new German word from context if the model has only experienced English. \par  
 On the other hand, this perspective also provides promises. We expect that our technique would perform even better in a system that had a more sophisticated understanding of language, because it would have more prior knowledge from which to bootstrap understanding of new words. Thus it would be very interesting to apply our technique on more complicated tasks like question answering, such as \citet{Santoro2017}, or in a grounded context, such as \citet{Hermann2017}. \par 
-\subsection{Word-by-word differences}
-We have presented all the results in this paper broken down by word rather than as averages, because there were large word-by-word differences on almost every analysis. Full training with the word did not improve the new word test perplexity more than the centroid approach on most of the words, but on two of them (``immune'' and ``strategist'') it did substantially better than even optimizing. Similarly, the optimizing method produced representational similarity structures that were more correlated with the full training with the word structure on three of the words we tested, but on a fourth the centroid approach produced a higher correlation. These results are likely due to the complex interactions between the context and the network's prior knowledge, and are difficult to quantify exactly. \par
-However, variable results are not a unique feature of learning the words later -- even full training with the word produced much better results on some words than others. Especially when considering small slices of a dataset (like the handful out of 42,000 sentences that contained each word), the data can be quite noisy. Furthermore, it's likely that some types of words are easier to learn than others. Thus these diverse patterns in our results should not be interpreted as a unique deficiency in our technique. Even standard deep learning is fallible when evaluated on its ability to learn from small amounts of data embedded in a larger dataset. \par
 \section{Conclusions}
 We have presented a technique for doing one- or few-shot learning of word embeddings from text data: freeze all the weights in the network except the embeddings for the new word, and then optimize these embeddings for the sentence, interleaving with negative examples from network's prior experience and stopping early. This results in substantial improvement of the ability to predict the word in context, with minimal impairment of prediction of other words. This technique could allow natural language processing systems to adapt more flexibly to a changing world, like humans do. More generally, it could serve as a model for how to integrate rapid adaption into deep learning systems. \par 
 \bibliographystyle{iclr2018_conference}
@@ -160,11 +169,10 @@ We have presented a technique for doing one- or few-shot learning of word embedd
 \label{interference_fig}
 \end{figure}
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{figures/10perms4_similarity_correlations.png}
-\caption{Similarity of representational similarity: how correlated are the similarity structures generated by the different methods with the similarity structure produced by training with the word?}
-\label{RSA_results}
+\begin{figure}
+\includegraphics[width=\textwidth]{figures/hundred_replay_cost_to_others.png}
+\caption{Percent change in perplexity on new word test data -- comparing 10-shot learning across 100 different words.}
+\label{hundred_word_cost_figure}
 \end{figure}
 
 \section{Implementation details} \label{methods_appdx}
@@ -175,6 +183,10 @@ The loss function was the cross-entropy loss of the model predictions. The model
 \subsubsection{Training on a new word} 
 \textbf{Centroid:} We extracted the input embeddings, softmax weights, and softmax biases of every word in the sentence except for the new word. We then averaged together these input embeddings to produce the new input embedding for the new word, etc. \par
 \textbf{Optimizing:} We initialized the new input embedding in one of three ways: with the centroid from above, with a vector of zeros, or with the current embedding vector for the word (note that this last would not be possible in a general context where a new word is not ``expected''). Starting from this point, we ran 100 epochs of batch gradient descent (batch size was equal to the number of training sentences), with a learning rate of 0.01. As a loss, we used the cross entropy loss plus 0.01 times the \(\ell_2\) norm of the new embedding.\par 
+\subsubsection{List of hundred words} \label{hundred_words_appdx}
+\begin{lstlisting}[language=Python]
+['ab', 'absolutely', 'agricultural', 'aim', 'animals', 'announcing', 'arguments', 'assist', 'averaged', 'bass', 'bullish', 'calculations', 'carefully', 'claiming', 'compare', 'conceded', 'congressman', 'consortium', 'contest', 'creation', 'cumulative', 'danger', 'darman', 'die', 'discrimination', 'disney', 'dominant', 'dorrance', 'edwards', 'efficiency', 'elderly', 'enable', 'encouraging', 'entry', 'environmentalists', 'execution', 'expenditures', 'facts', 'formula', 'gaf', 'geneva', 'globe', 'golf', 'healthcare', 'homeless', 'honor', 'horse', 'incest', 'informed', 'investigators', 'iron', 'jackson', 'judgment', 'knight', 'lake', 'lend', 'louisville', 'lowest', 'lucrative', 'maturing', 'minute', 'mississippi', 'motorola', 'museum', 'nabisco', 'netherlands', 'nigel', 'nine-month', 'owning', 'petrochemical', 'pioneer', 'prepare', 'print', 'pro-choice', 'recognized', 'referred', 'regarded', 'rejection', 'requests', 'resorts', 'responsibilities', 'rolled', 'sansui', 'serving', 'setback', 'similarly', 'somewhere', 'sounds', 'staffers', 'stolen', 'treasurys', 'treat', 'truth', 'utah', 'vulnerable', 'ward', 'warsaw', 'wedtech', 'wheat', 'wisconsin']
+\end{lstlisting}
 \section{Log-probability analysis broken out} \label{log_prob_appendix}
 % latex table generated in R 3.4.1 by xtable 1.8-2 package
 % Mon Oct 23 20:24:49 2017
@@ -214,6 +226,21 @@ borrow &   1 & centroid & -9.75 & -10.43 & -9.65 \\
   rice &  10 & with\_word & -9.84 & -15.43 & -12.44 \\ 
    \hline
 \end{tabular}
+
 \end{table}
+\section{Embedding similarity analyses} \label{emb_sim_anal}
+It has often been noted that relationships between word embeddings capture semantic features of the words, such as analogies between words \citep{Mikolov2013}. Thus it is natural to ask to what extent the word vectors produced by one-shot learning produce similarity structures close to those produced by full training with the word. To address this question, we computed the dot product\footnote{This seems to be the appropriate similarity ``metric'', given that the logits for the softmax over the vocabulary are formed by a matrix-vector multiplication which amounts to computing these dot products.} of the new word output embedding with all other word output embeddings. This vector of dot-product results can be thought of as a similarity map for the new word. We then compared these similarity maps to the similarity maps produced by full training with the word by computing correlations between the similarity maps. (See Fig. \ref{RSA_results} for our results.)\par
+Different runs of full training with the word produced very correlated similarity structures (all correlations greater than 0.9). Thus there does appear to be some consistent semantic structure that the embeddings are capturing. However, neither the centroid nor the optimizing one-shot learning methods seemed to be capturing this structure. The centroid method actually produced similarity structures that were \textbf{negatively} correlated with the full training similarity structures in three out of four cases! The optimizing method produced slightly more similar structures, but only in so far as most of its similarity structures were effectively uncorrelated with the full training similarity structure. Only for one word each did the methods produce a similarity structure that was strongly positively correlated with the structure produced by full training with the word. \par
+These results are difficult to interpret. On the one hand, the consistency of the semantic knowledge produced by the network when fully trained with the word suggests that it is discovering important structure. On the other hand, the later learning approaches actually produce even more internally consistency, at least when training with several sentences. Full training with the word produces an average correlation of 0.93 between different training runs, whereas optimizing with all ten sentences produces an average correlation of 0.97 (and optimizing with 1 sentence produces an average correlation of 0.50). Furthermore, the results of section \ref{digging_deeper} above suggest that our approach is doing about as well at distinguishing contexts where the new word does and does not appear. That is, the optimizing runs are extracting consistent structure as well, they are just creating different representational structures than the full training runs. \par
+These different representations may be explained by the removal of some contextual cues when the sentences are presented in isolation (noted above) -- the networks doing full training with the word are able to pay attention to relationships across sentence boundaries, which may give them exposure to word co-occurrences that the one-shot learning approach is missing. Including the surrounding context sentences in the training might result in more similar representational structures. \par
+\begin{figure}[H]
+\centering
+\includegraphics[width=\textwidth]{figures/10perms4_similarity_correlations.png}
+\caption{Similarity of representational similarity: how correlated are the similarity structures generated by the different methods with the similarity structure produced by training with the word?}
+\label{RSA_results}
+\end{figure}
+
+\section{Other related work} \label{Herbelot}
+A commenter on a draft of this paper also noted that \cite{Herbelot2017} pursued related questions and independently came to some of the same conclusions we reached. However, we believe our results improve upon their work in several important ways. First, while they were only able to show benefits on training from definitions of a word, we show benefits of learning from a word in context. Furthermore, they only evaluated on embedding similarity, while we show behaviorally relevant improvements. This is important, because one conclusion from our results of our embedding similarity analyses in Appendix \ref{emb_sim_anal} show that dissimilar embeddings may nevertheless offer comparable performance. Finally, we explore in depth the effects of varying data parameters like the number of training sentences, and analyze where the improvements are occurring, both from the perspectives of parameters and outputs. \par 
 
 \end{document}
