--- a/data_analysis/one_shot_word_analysis.Rmd
+++ b/data_analysis/one_shot_word_analysis.Rmd
@@ -974,75 +974,93 @@ d = d %>%
   mutate(nw_delta = post_new_word_test_perp - pre_new_word_test_perp, pct_delta=100*nw_delta/pre_new_word_test_perp, test_delta=post_test_perp - pre_test_perp, pct_test_delta = 100 * test_delta/pre_test_perp,  train_with_word=F) %>%
   mutate(Approach=factor(Approach, 
                          levels=c("centroid", "opt", "opt_centroid", "opt_zero", "train_with_word"), 
-                         labels=c("Centroid", "Optimizing\nfrom current", "Optimizing\nfrom centroid", "Optimizing\nfrom zero", "Full training\nwith the word")))
+                         labels=c("Centroid", "Optimizing\nfrom current", "Optimizing\nfrom centroid", "Optimizing\nfrom zero", "Full training\nwith all words")))
 withword_d = withword_d %>% 
   mutate(nw_delta = post_withword_test_perp - withoutword_test_perp,  pct_delta=100*nw_delta/withoutword_test_perp, test_delta=post_test_perp - without_test_perp, pct_test_delta = 100 * test_delta/pre_test_perp)
 ```
 
 ```{r}
 number_of_new_words = length(words)
-withword_d = withword_d[rep(1:number_of_new_words, each=10),]
 withword_d = withword_d %>%
-  mutate(num_train=rep(1:10, number_of_new_words), Approach='Full training\nwith the word', train_with_word=T) %>%
-  select(num_train, Approach, new_word, nw_delta, pct_delta, test_delta, pct_test_delta, train_with_word)
+  mutate(Approach='Full training\nwith all words', train_with_word=T) %>%
+  select(Approach, new_word, nw_delta, pct_delta, test_delta, pct_test_delta, train_with_word)
+avg_withword_d = withword_d %>% 
+  group_by(Approach, train_with_word) %>% 
+  summarize(nw_delta = mean(nw_delta), pct_delta=mean(pct_delta), test_delta=mean(test_delta), pct_test_delta=mean(pct_test_delta)) %>% 
+  ungroup() 
 avg_d = d %>% 
-  group_by(num_train, Approach, new_word, train_with_word) %>% 
+  group_by(Approach, train_with_word) %>% 
   summarize(nw_delta = mean(nw_delta), pct_delta=mean(pct_delta), test_delta=mean(test_delta), pct_test_delta=mean(pct_test_delta)) %>% 
   ungroup() %>% 
+  rbind(., avg_withword_d) %>%
+  mutate(Approach=factor(Approach, 
+                         levels=c("Centroid", "Optimizing\nfrom current", "Optimizing\nfrom centroid", "Optimizing\nfrom zero", "Full training\nwith all words"), 
+                         labels=c("Centroid", "Optimizing\nfrom current", "Optimizing\nfrom centroid", "Optimizing\nfrom zero", "Full training\nwith all words")))
+
+```
+
+```{r}
+plotting_d = d %>%
+  select(Approach, new_word,nw_delta,pct_delta,test_delta,pct_test_delta,train_with_word) %>%
   rbind(., withword_d) %>%
   mutate(Approach=factor(Approach, 
-                         levels=c("Centroid", "Optimizing\nfrom current", "Optimizing\nfrom centroid", "Optimizing\nfrom zero", "Full training\nwith the word"), 
-                         labels=c("Centroid", "Optimizing\nfrom current", "Optimizing\nfrom centroid", "Optimizing\nfrom zero", "Full training\nwith the word")))
+                         levels=c("Centroid", "Optimizing\nfrom current", "Optimizing\nfrom centroid", "Optimizing\nfrom zero", "Full training\nwith all words"), 
+                         labels=c("Centroid", "Optimizing\nfrom current", "Optimizing\nfrom centroid", "Optimizing\nfrom zero", "Full training\nwith all words")))
 ```
 
 # Approach comparisons
 
 ```{r, echo=FALSE, message=F}
 ggplot() +
-  geom_line(data=avg_d, aes(x=num_train, y=pct_delta, color=Approach, linetype=train_with_word, group=Approach), size=1) +
-  geom_line(data=d, aes(x=num_train,y=pct_delta, color=Approach, group=interaction(Approach, perm)), alpha=0.25) +
-  facet_wrap(~ new_word) +
-  xlab("Number of training sentences") +
-  scale_x_continuous(breaks=1:10) +
+  geom_point(data=avg_d, aes(x=Approach, y=pct_delta, color=Approach), stat="identity", size = 5) +
+  geom_point(data=plotting_d, aes(x=Approach,y=pct_delta, color=Approach), position=position_jitter(height=0., width=0.2), alpha=0.2) +
   scale_color_brewer(palette='Dark2', drop=FALSE) +
   ylab("Change in perplexity on new word test data (%)") +
   guides(linetype=F,
-         color=guide_legend(
-                 keywidth=0.1,
-                 keyheight=0.4,
-                 default.unit="inch"))+
+         color=F)+
   theme_bw(base_size=12) +
   theme(panel.grid.minor=element_blank(), panel.grid.major=element_blank())
 ```
 ```{r}
-ggsave('../results/10perms6_replay_delta_perplexity.png', width=7, height=5)
+ggsave('../results/hundred_replay_delta_perplexity.png', width=7, height=5)
 ```
 
 ```{r}
 ggplot() +
-  geom_line(data=avg_d, aes(x=num_train, y=pct_test_delta, color=Approach, linetype=train_with_word), size=1) +
-  geom_line(data=d, aes(x=num_train,y=pct_test_delta, color=Approach, group=interaction(Approach, perm)), alpha=0.25) +
-  facet_wrap(~ new_word) +
-  xlab("Number of training sentences") +
-  scale_x_continuous(breaks=1:10) +
-  ylim(NA, 2.0) +
-  scale_color_brewer(palette='Dark2', drop=F) +
+  geom_point(data=avg_d, aes(x=Approach, y=pct_test_delta, color=Approach), stat="identity", size = 5) +
+  geom_point(data=plotting_d %>% filter(!grepl("Full", Approach)), aes(x=Approach,y=pct_test_delta, color=Approach), position=position_jitter(height=0., width=0.2), alpha=0.2) +
+  scale_color_brewer(palette='Dark2', drop=FALSE) +
   ylab("Change in perplexity on PTB test data (%)") +
+  ylim(NA, 2.0) +
   guides(linetype=F,
-         color=guide_legend(
-                 keywidth=0.1,
-                 keyheight=0.4,
-                 default.unit="inch"))+
+         color=F)+
   theme_bw(base_size=12) +
   theme(panel.grid.minor=element_blank(), panel.grid.major=element_blank())
 ```
 
 ```{r}
-ggsave('../results/10perms6_replay_cost_to_others.png', width=7, height=5)
+ggsave('../results/hundred_replay_cost_to_others.png', width=7, height=5)
 ```
 
 ```{r}
 d %>%
-  group_by(Approach, num_train) %>%
+  group_by(Approach) %>%
   summarize(max_delta=max(pct_test_delta), max_nw_delta = min(pct_delta))
 ```
+```{r}
+comp_d = plotting_d %>%
+  select(new_word, Approach, pct_delta) %>%
+  group_by(new_word) %>%
+  spread(Approach, pct_delta) %>%
+  ungroup() %>%
+  mutate(delta_delta =`Optimizing\nfrom centroid` - Centroid, pct_delta_delta = (`Optimizing\nfrom centroid` - Centroid)/abs(Centroid), full_delta_delta=`Optimizing\nfrom centroid` - `Full training\nwith all words`)
+
+comp_d %>%
+  summarize(mean_delta_delta = mean(delta_delta, na.rm=T), min_delta_delta = min(delta_delta, na.rm=T), max_delta_delta = max(delta_delta, na.rm=T), mean_pct_delta_delta = mean(pct_delta_delta, na.rm=T))
+```
+
+```{r}
+t.test(comp_d$full_delta_delta)
+t.test(comp_d$delta_delta)
+```
+
